--- a/redb/Cargo.toml
+++ b/redb/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap.workspace = true
+stats.workspace = true
+redb = "2.1"
