--- a/.github/workflows/sled.yml
+++ b/.github/workflows/sled.yml
@@ -10,6 +10,8 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Rust Version
+        run: rustc --version
       - name: Checkout
         uses: actions/checkout@v4
       - name: Compile
