--- a/.github/workflows/redb.yml
+++ b/.github/workflows/redb.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Compile
         run: cargo build --release --bin redb
       - name: Bench
-        run: EXE=target/release/redb sh bench.sh
+        run: RUST_BACKTRACE=1 EXE=target/release/redb sh bench.sh
